--- a/css/styles.css
+++ b/css/styles.css
@@ -38,8 +38,9 @@ body {
     font-size: 100px;
     font-family: 'Dancing Script', cursive;
     color: #363636;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
 }
+
 
 
 
@@ -48,7 +49,8 @@ body {
     display: inline-block;
     position: relative;
     width: 250px;
-    height: 250px;
+    height: 120px;
+    margin-top: 50px;
 
 }
 
@@ -103,9 +105,12 @@ body {
     background: #ccc;
     width: 500px;
     height: 500px;
-    border-radius:15px;
-   
+    border-radius: 15px;
+}
 
+.mailme{
+    display: inline-block;
+    position: relative;
 }
 
 .carousel .carousel-item img {
@@ -118,20 +123,15 @@ body {
     left: 0;
     z-index: -1;
     border-radius: 15px;
-  
-
-   
+    border: 5px solid rgba(255, 255, 255, 0.027);
 }
 
-.img-modal{
-    border-radius: 15px ;
+.img-modal {
+    border-radius: 15px;
 }
 
-.carousel .indicators .indicator-item{
-  
-    
-
-    background:rgba(109, 108, 108, 0.568);
-
-
+.carousel .indicators .indicator-item {
+    background: rgba(109, 108, 108, 0.568);
 }
+
+
