--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,6 @@
 /* Settings responsive */
 
-@media screen and (max-width:955px){
+@media screen and (max-width:955px) {
     .title {
         font-size: 60px;
     }
@@ -15,16 +15,28 @@
         width: 300px;
         height: 300px;
         border-radius: 15px;
-    
+
     }
 }
 
-@media screen and (max-width:780px){
+@media screen and (max-width:780px) {
     .title {
         font-size: 60px;
+
+        margin-bottom: 80px;
     }
 
-    .subtitle{
+    .carousel {
+        min-height: 400px;
+    }
+
+    .row .description{
+        font-size: 12px;
+        text-align: justify;
+        }
+       
+
+    .subtitle {
         font-size: 30px;
     }
 
@@ -35,9 +47,64 @@
         align-items: center;
         user-select: none;
         background: #ccc;
+        width: 400px;
+        height: 400px;
+        border-radius: 15px;
+
+    }
+}
+
+@media screen and (max-width:430px) {
+    .title {
+        font-size: 50px;
+
+        margin-bottom: 0px;
+    }
+
+    .carousel {
+        min-height: 320px;
+    }
+
+
+    .carousel .carousel-item {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        user-select: none;
+        background: #ccc;
         width: 300px;
         height: 300px;
         border-radius: 15px;
-    
+
+    }
+}
+
+@media screen and (max-width:300px) {
+    .title {
+        font-size: 30px;
+
+        margin-bottom: 0px;
+    }
+
+    .carousel {
+        min-height: 230px;
+    }
+    .subtitle {
+        font-size: 20px;
+    }
+
+
+    .carousel .carousel-item {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        user-select: none;
+        background: #ccc;
+        width: 220px;
+        height: 220px;
+        border-radius: 15px;
+
     }
 }
