--- a/css/styles.css
+++ b/css/styles.css
@@ -89,11 +89,21 @@ body {
     background-color: #36221c;
 }
 
+.modal-content .subtitle-modal{
+    padding-bottom: 25px;}
+
+.row .description{
+font-size: 30px;
+text-align: justify;
+}
+
+
+
 
 /* Materialize styles */
 
 .carousel {
-    min-height: 500px;
+    min-height: 550px;
 }
 
 .carousel .carousel-item {
@@ -108,15 +118,10 @@ body {
     border-radius: 15px;
 }
 
-.mailme{
-    display: inline-block;
-    position: relative;
-}
 
 .carousel .carousel-item img {
 
-    width: 100%;
-    height: 100%;
+    
     object-fit: cover;
     position: absolute;
     top: 0;
@@ -128,6 +133,11 @@ body {
 
 .img-modal {
     border-radius: 15px;
+    object-fit: cover;
+    width: 100%;
+    border: 5px solid #632e0244;
+    
+    
 }
 
 .carousel .indicators .indicator-item {
