--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,13 @@
 /* Settings responsive */
 
+
+@media screen and (max-width:1440px) {
+    .row .description {
+        font-size: 20px;
+        text-align: justify;
+    }
+}
+
 @media screen and (max-width:955px) {
     .title {
         font-size: 60px;
@@ -30,11 +38,11 @@
         min-height: 400px;
     }
 
-    .row .description{
-        font-size: 12px;
+    .row .description {
+        font-size: 15px;
         text-align: justify;
-        }
-       
+    }
+
 
     .subtitle {
         font-size: 30px;
@@ -58,12 +66,14 @@
     .title {
         font-size: 50px;
 
-        margin-bottom: 0px;
+        margin-bottom: 20px;
     }
 
-    .carousel {
-        min-height: 320px;
+    .logoo .row .col {
+        margin-top: 20px;
+
     }
+
 
 
     .carousel .carousel-item {
@@ -73,23 +83,20 @@
         align-items: center;
         user-select: none;
         background: #ccc;
-        width: 300px;
-        height: 300px;
+        width: 90%;
+        height: 90%;
         border-radius: 15px;
 
     }
 }
 
-@media screen and (max-width:300px) {
+@media screen and (max-width:380px) {
     .title {
-        font-size: 30px;
+        font-size: 45px;
 
-        margin-bottom: 0px;
+        margin-bottom: 20px;
     }
 
-    .carousel {
-        min-height: 230px;
-    }
     .subtitle {
         font-size: 20px;
     }
@@ -102,9 +109,10 @@
         align-items: center;
         user-select: none;
         background: #ccc;
-        width: 220px;
-        height: 220px;
+        width: 90%;
+        height: 90%;
         border-radius: 15px;
 
     }
 }
+
