--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ body {
 
     font-family: 'Raleway', sans-serif;
     background-size: cover;
+    background-position: center;
 
     background-attachment: fixed;
 
@@ -24,7 +25,7 @@ body {
 
 }
 
-.contenedor .title {
+.title {
     width: 100%;
     margin: auto;
     text-align: center;
@@ -38,9 +39,8 @@ body {
     font-size: 100px;
     font-family: 'Dancing Script', cursive;
     color: #363636;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
-
 
 
 
@@ -50,8 +50,12 @@ body {
     position: relative;
     width: 250px;
     height: 120px;
-    margin-top: 50px;
 
+}
+
+.logoo .row .col {
+    margin-top: 50px;
+    height: 120px;
 }
 
 .logo {
@@ -89,21 +93,11 @@ body {
     background-color: #36221c;
 }
 
-.modal-content .subtitle-modal{
-    padding-bottom: 25px;}
-
-.row .description{
-font-size: 30px;
-text-align: justify;
-}
-
-
-
 
 /* Materialize styles */
 
 .carousel {
-    min-height: 550px;
+    min-height: 500px;
 }
 
 .carousel .carousel-item {
@@ -116,32 +110,66 @@ text-align: justify;
     width: 500px;
     height: 500px;
     border-radius: 15px;
+
+
+}
+
+.social-media-icon {
+    display: inline-block;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    border: 3px solid #3a3a3a;
+    border-radius: 50%;
+    text-align: center;
+    background: rgba(255, 255, 255, 0.384);
+    color: hsl(0, 0%, 82%);
+}
+
+
+.social-media-icon:hover {
+    background: rgba(253, 228, 138, 0.637);
+    color: white;
+}
+
+.social-media-icon i {
+    font-size: 40px;
+    line-height: 43px;
+    color: #000;
 }
 
 
 .carousel .carousel-item img {
 
-    
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     position: absolute;
     top: 0;
     left: 0;
     z-index: -1;
     border-radius: 15px;
-    border: 5px solid rgba(255, 255, 255, 0.027);
+    border: 5px solid  rgba(194, 194, 194, 0.11);
+
+
+
 }
 
-.img-modal {
+.responsive-img {
     border-radius: 15px;
-    object-fit: cover;
-    width: 100%;
-    border: 5px solid #632e0244;
-    
+    border: 5px solid rgba(233, 108, 6, 0.404);
+
     
 }
+
+
+
 
 .carousel .indicators .indicator-item {
+
     background: rgba(109, 108, 108, 0.568);
 }
 
-
+.description {
+    font-size: 25px;
+}
