--- a/css/styles.css
+++ b/css/styles.css
@@ -110,8 +110,11 @@ body {
     width: 500px;
     height: 500px;
     border-radius: 15px;
+}
 
-
+.foot{
+    color:white;
+    cursor: pointer;
 }
 
 .social-media-icon {
